# jira-timesheet

./: .git-blame-ignore-revs  .gitignore  PLAN-manuelle-erfassung.md  PLAN.md  README.de.md  README.md  bootstrap.ps1  bootstrap.sh  compile-linux.sh  compile-macos.sh  compile-win64.ps1  install.ps1  install.sh  pyproject.toml  run.bat  run.ps1  run.sh  setup.bat
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/jira_timesheet/: __init__.py  __main__.py  app.py  app.tcss  i18n.py
src/jira_timesheet/locale/: de.json  en.json
src/jira_timesheet/models/: export_column.py  settings.py  timesheet.py
src/jira_timesheet/screens/: confirm_screen.py  detail_screen.py  info_screen.py  manual_entry_screen.py  settings_screen.py  year_screen.py
src/jira_timesheet/services/: __init__.py  anonymizer.py  cache_service.py  duration.py  excel_exporter.py  holiday_service.py  jira_client.py  manual_entry_service.py  pdf_exporter.py  timesheet_service.py
src/jira_timesheet/widgets/: calendar_view.py  config_panel.py  resizable_data_table.py  summary_panel.py  timesheet_table.py
tests/: conftest.py  test_manual_entries.py  test_models.py  test_services.py  test_widgets.py
