[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-timesheet"
version = "1.11.1"
description = "TUI tool for generating timesheets from Jira worklogs"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Michael Blaess"},
]
dependencies = [
    "textual>=0.40",
    "rich>=13.0",
    "httpx>=0.25",
    "openpyxl>=3.1",
    "fpdf2>=2.7",
    "holidays>=0.40",
    "textual-themes @ git+https://github.com/michaelblaess/textual-themes.git",
    "textual-widgets @ git+https://github.com/michaelblaess/textual-widgets.git",
    "textual-fspicker>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.5",
    "mypy>=1.8",
    "poethepoet>=0.29",
    "ruff>=0.3",
    "types-openpyxl>=3.1.5.20260518",
]

[project.scripts]
jira-timesheet = "jira_timesheet.__main__:main"

[tool.poe.tasks]
run = { cmd = "python -m jira_timesheet", help = "Startet jira-timesheet" }
test = { cmd = "pytest", help = "Tests sequentiell (schnell bei Unit-Tests)" }
test-parallel = { cmd = "pytest -n auto", help = "Tests parallel (fuer langsame Test-Suiten)" }
cov = { cmd = "pytest --cov=jira_timesheet --cov-report=term-missing", help = "Tests + Coverage" }
typecheck = { cmd = "mypy src", help = "mypy strict ueber src/" }
lint = { cmd = "ruff check .", help = "Ruff Linting" }
fmt = { cmd = "ruff format .", help = "Ruff Formatting" }
fix = { cmd = "ruff check --fix .", help = "Ruff Auto-Fix" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jira_timesheet = ["locale/*.json"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# textual-widgets liefert (noch) keinen py.typed-Marker.
[[tool.mypy.overrides]]
module = "textual_widgets.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501", "ASYNC109", "ASYNC240", "E402", "N806"]
